# Project

./: README.md  setup.cfg  setup.py
ProjectEvraz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
adapters/chat_api/: app.py  auth.py  controllers.py  join_points.py  settings.py
adapters/database/: Tables.sql  __init__.py  mapping.py  repositories.py  settings.py  tables.py
application/: dataclasses.py  errors.py  interfaces.py  services.py
composites/: chat_api.py
docs/: UseCase.puml
tests/: conftest.py  tests.py
