

[metadata]
name = ProjectEvraz
version = 0.0.1
description = Project
author = Julia Sopelnik
classifiers =
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta


[options]
packages = find_namespace:
python_requires = >=3.7
install_requires =
    attrs~=21.2.0
    pydantic~=1.8.2
    sqlalchemy~=1.4.23
    classic-components
    classic-aspects
    classic-http-api
    classic-app-layer
    classic-sql-storage
    classic-messaging
    classic-messaging-kombu


[options.packages.find]
where = sources

[options.extras_require]
dev =
    pytest~=6.2.5
    pytest-cov~=2.12.1
    twine~=3.4.2
    build~=0.7.0
